# x11-xinput

./: .gitignore  Makefile  XInput.chs  x11-xinput.cabal  xitest.hs
Graphics/X11/: XInput.hs
Graphics/X11/XInput/: Devices.hs  Foreign.chs  Functions.hs  Internal.chs  Parser.chs  Types.chs
